# B-Twin

./: README.md  pyproject.toml  run_on_real_data.py  run_simulation_temporal_rd.py  run_simulations.py
methods/Synctwin/: main.py  montecarlo_ate.py  run_synctwin.py
methods/Synctwin/src/: GRUD.py  SyncTwin.py  SyncTwin_data_preperation.py  config.py
methods/Synctwin/src/util/: batching_utils.py  config.py  eval_utils.py  io_utils.py  train_utils.py
methods/classic_baselines/: main.py  temporal_rd.py
methods/classic_baselines/src/: config.py  methods.py  utils.py  utils_indiv.py
methods/neural_baselines/: run_neural_baselines.py  simulated_data.py
methods/neural_baselines/src/: configs.py  experiments.py  neural_baselines_ts.py
methods/proposed_model/: B_Twin.py  B_Twin_C1.py  B_Twin_C2.py  B_Twin_O.py  hyperparameters_tuning.py  run_b_twin.py
methods/proposed_model/src/: ablation.py  att.py  config.py  data_format.py  data_preperation.py  evaluate.py  hyperparamters.py  loss.py  model.py  train_utils.py
methods/simulations/: config.py  simulation.py  simulation_new.py
notebook/: bootstrap_graph_example.ipynb  quickstart.ipynb
src/: bootstrap_full_training.py
